feat(xianyu): persist rental periods and shipment state